# crosscore-mod-manager

./: README.md  UPDATE_LOG.md  analyze_strings.py  build.gradle.kts  gradle.properties  readme.html  renovate.json  settings.gradle.kts
.github/workflows/: ci.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro
app/keystore/: androidkey.jks
app/src/androidTest/java/top/laoxin/modmanager/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/aidl/top/laoxin/modmanager/bean/: BeanFile.aidl  GameInfo.aidl  GameInfoBean.aidl  ModBean.aidl
app/src/main/aidl/top/laoxin/modmanager/service/: IFileExplorerService.aidl
app/src/main/aidl/top/laoxin/modmanager/useservice/: IFileExplorerService.aidl
app/src/main/cpp/: AssetBundleJNI.cpp  AssetBundleJNI.h  CMakeLists.txt
app/src/main/cpp/ABRecompressor/: CMakeLists.txt
app/src/main/cpp/ABRecompressor/include/: ABRecompressor.h
app/src/main/cpp/ABRecompressor/patches/: lz4_CMakeLists.txt
app/src/main/cpp/ABRecompressor/src/: ABRecompressor.cpp  BlocksAndDirectoryInfo.cpp  BlocksAndDirectoryInfo.h  BundleFile.cpp  BundleFile.h  Compression.cpp  Compression.h  CompressionType.h  DirectoryInfo.h  Header.cpp  Header.h  Reader.h  StorageBlockInfo.h  Type.h  Writer.h
app/src/main/java/top/laoxin/modmanager/: App.kt  MainActivity.kt
app/src/main/java/top/laoxin/modmanager/bean/: AntiHarmonyBean.kt  BackupBean.kt  BeanFile.kt  DownloadGameConfigBean.kt  GameInfo.kt  GameInfoBean.kt  GithubBean.kt  InfoBean.kt  ModBean.kt  ModBeanTemp.kt  ThanksBean.kt  ThinksBean.kt  UpdateBean.kt
app/src/main/java/top/laoxin/modmanager/constant/: GameInfoConstant.kt  ModPath.kt  OSVersion.kt  PathType.kt  SpecialGame.kt
app/src/main/java/top/laoxin/modmanager/data/: AppContainer.kt  Converters.kt  ModManagerDatabase.kt  UserPreferencesRepository.kt
app/src/main/java/top/lings/start/: StartActivity.kt  UserAgreement.kt
app/src/main/kotlin/top/laoxin/modmanager/: App.kt  MainActivity.kt
app/src/main/kotlin/top/lings/start/: Start.kt  StartActivity.kt
app/src/main/kotlin/top/lings/updater/: GithubApiService.kt  Updater.kt
app/src/main/kotlin/top/lings/userAgreement/: UserAgreement.kt  UserAgreementActivity.kt
app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-night/: colors.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-sw600dp/: ic_launcher_background.xml  strings.xml  themes.xml
app/src/test/java/top/laoxin/modmanager/: ArchiveUtil.kt  ExampleUnitTest.kt  hot_update_list.json  persistent_res_list.json  test.json  test1.json
app/src/test/kotlin/top/laoxin/modmanager/: ArchiveUtil.kt  ExampleUnitTest.kt  ak.json  test.json  碧蓝航线示例配置.json
docs/: FileTools_Architecture_Refactoring.md  ModBean_Refactoring.md  navigation3_migration.md  traditional_mod_scan_design.md
gameConfig/: com.RoamingStar.BlueArchive.bilibili.json  com.RoamingStar.BlueArchive.json  com.YoStarEN.Arknights.json  com.YostarJP.BlueArchive.json  com.bilibili.azurlane.json  com.bilibili.blhx.m4399.json  com.dragonli.projectsnow.bilibili.json  com.dragonli.projectsnow.lhm.json  com.gamebeans.gp.jczx.json  com.hypergryph.arknights.bilibili.json  com.hypergryph.arknights.json  com.neowizgames.game.browndust2.json  com.netease.yzs.json  com.nexon.bluearchive.json  com.seasun.snowbreak.google.json  jp.co.nextninja.dimensions.json  配置文件使用说明.txt
gameConfig/api/: gameConfig.json  information.json  thanks.json  thinks.json
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
update/: update.json
(+440 files in other folders)
